# csad2526ki407oleksiukmarkoandriiovych18

./: CMakeLists.txt  README.md  ci.bat  ci.sh  history.txt  math_operations.h
.github/workflows/: ci.yml
tests/: unit_tests.cpp
